<!DOCTYPE resources [
    <!ENTITY codename "Tempo">
    ]>

<resources>
    <string name="app_name" translatable="false">AssistApp</string>
    <string name="id_card">ID card number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="search">Search</string>
    <string name="send">Send</string>
    <string name="username">User</string>

    <string name="date">Date</string>

    <string name="patient">"Patient: "</string>
    <string name="nationality">"Nationality: "</string>
    <string name="residence">"Residence: "</string>
    <string name="job">"Job: "</string>
    <string name="sex">"Sex: "</string>
    <string name="birthdate">"Birthdate: "</string>
    <string name="years">%1$s years</string>

    <string name="masculine">Male</string>
    <string name="feminine">Female</string>

    <string name="alcoholic">Alcohol</string>
    <string name="smoker">Tobacco</string>
    <string name="drugs">Drugs</string>

    <string name="hospitalised">Hospitalised</string>

    <string name="pref_notifications">Notifications</string>
    <string name="pref_account">Personal</string>
    <string name="pref_support">Support</string>

    <string name="pref_vibrate_title">Vibration</string>
    <string name="pref_vibrate_summary">Vibrate when a message is received</string>
    <string name="pref_sound_title">Sound</string>
    <string name="pref_sound_summary">Sound when a message is received</string>

    <string name="pref_email_title">Change email address</string>
    <string name="pref_password_title">Change password</string>

    <string name="nav_about">About AssistApp</string>

    <string name="no_network">AssistApp needs a network connection in order to work</string>

    <string name="med_record">Medical record</string>
    <string name="settings">Settings</string>
    <string name="logout">Log out</string>
    <string name="options">Options</string>
    <string name="conversations">Conversations</string>

    <string name="loggingin">Logging in</string>

    <string name="about_Version">Version %1$s</string>
    <string name="about_company">BitBits, 2016–2017</string>
    <string name="about_developed">Developed by BitBits</string>
    <string name="codename" translatable="false">&codename;</string>
    <string name="about_codename" translatable="false">AssistApp \"&codename;\"</string>

    <string name="orderSurname">Order by surname</string>
    <string name="orderName">Order by name</string>
    
    <string name="connection_error">Connection error</string>
    <string name="inactive_account">Your account has been deactivated</string>

    <string name="no_data">No data registered</string>
    <string name="no_record">No records registered</string>

    <string name="old_version">New version available, please update</string>
    <string name="update">Update</string>

    <string name="new_messages">%1$s new messages</string>
    <string name="new_message">%1$s new message</string>

    <string name="non_available">N/A</string>
    <string name="send_email">Send email</string>
    <string name="no_email">Email app not installed</string>
    <string name="call">Call</string>
    <string name="no_phone">No phone registered</string>
    <string name="forgot_password">I forgot my password</string>
    <string name="reset_password">Reset your password</string>
    <string name="email">Email address</string>
    <string name="reset">Reset</string>
    <string name="connecting">Connecting</string>
    <string name="successful_reset">Check your email</string>
    <string name="failure_reset">Email not registered</string>
    <string name="change_password">Please change your password</string>
</resources>
