<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forgot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/vertical_margin"
    android:paddingLeft="@dimen/horizontal_margin"
    android:paddingRight="@dimen/horizontal_margin"
    android:paddingTop="@dimen/vertical_margin"
    tools:context=".Forgot_Activity">

    <ImageView
        android:id="@+id/imvLogo"
        android:layout_width="@dimen/logo_width"
        android:layout_height="@dimen/logo_height"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/imvLogo"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/error"
        app:hintTextAppearance="@style/hint">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/id_card"
            android:inputType="textVisiblePassword|textNoSuggestions"
            android:maxLength="9" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/tilUser"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/error"
        app:hintTextAppearance="@style/hint"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:lines="1" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnReset"
        style="@style/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilEmail"
        android:background="@drawable/shape_login"
        android:text="@string/reset" />
</RelativeLayout>