<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/txvNationality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txvName"
        android:text="TextView" />

    <TextView
        android:id="@+id/txvBirth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp"
        android:layout_toEndOf="@+id/txvName"
        android:layout_toRightOf="@+id/txvName"
        android:text="TextView" />

    <TextView
        android:id="@+id/txvResidence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/txvBirth"
        android:layout_alignRight="@+id/txvBirth"
        android:layout_below="@+id/txvBirth"
        android:text="TextView" />

    <TextView
        android:id="@+id/txvJob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txvNationality"
        android:text="TextView" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txvJob">

        <CheckBox
            android:id="@+id/cbxAlcohol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alcoholic" />

        <CheckBox
            android:id="@+id/cbxSmoker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smoker" />

        <CheckBox
            android:id="@+id/cbxDrugs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drugs" />

    </LinearLayout>

    <TextView
        android:id="@+id/txvSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_below="@+id/txvResidence"
        android:layout_alignLeft="@+id/txvResidence"
        android:layout_alignStart="@+id/txvResidence" />

</RelativeLayout>