<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:paddingBottom="@dimen/vertical_margin"
    android:paddingLeft="@dimen/horizontal_margin"
    android:paddingRight="@dimen/horizontal_margin"
    android:paddingTop="@dimen/vertical_margin">

    <TextView
        android:id="@+id/txvAboutTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/colorWhite"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txvAboutVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txvAboutTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/about_Version"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imgAppLogo"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txvAboutVersion"
        android:layout_marginTop="15dp"
        android:adjustViewBounds="false"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/txvCompanyInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgAppLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/about_company"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorWhite"
        android:textSize="18sp" />

    <!--<ImageView
        android:id="@+id/imgCompanyLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/bitbits"
        android:layout_below="@+id/imgAppLogo"
        android:layout_toLeftOf="@+id/txvCompanyInfo"
        android:layout_toStartOf="@+id/txvCompanyInfo" />-->


    <!--<TextView
        android:id="@+id/textView2"
        android:text="@string/about_reserved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />-->
</RelativeLayout>